--- a/liferay_overwrite.css
+++ b/liferay_overwrite.css
@@ -1,1 +1,102 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+div#wrapper {
+    padding: 0;
+    margin: inherit;
+}
+
+div#wrapper {
+    padding: 0;
+    margin: inherit;
+}
+div.navbar-inner {
+    margin: 0px 0px 0px 0px;
+    padding: 0px 40px 0px 40px;
+}
+nav#breadcrumbs {
+    margin-bottom: 0px  !important;
+}
+
+div.navbar-inner {
+    margin: 0px 0px 0px 0px;
+    padding: 0px 40px 0px 40px;
+}
+nav#breadcrumbs {
+    margin-bottom: 0px  !important;
+}
+
+.container {
+  width: 100%;
+  padding-left: 0!important;
+  padding-right: 0!important;
+  margin-left: 0!important;
+  margin-right: 0!important;
+
+}
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
+.container-fluid, .container-sm, .container-md, .container-lg, .container-xl {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+
+.portlet-borderless-container {
+    padding: 0!important;
+    margin: 0!important;
+}
+
+@media (min-width: 576px) {
+  .container, .container-sm {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container, .container-sm, .container-md {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+  .container, .container-sm, .container-md, .container-lg {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container, .container-sm, .container-md, .container-lg, .container-xl {
+    max-width: 1140px;
+  }
+}
 
