--- a/custom_bootstrap.css
+++ b/custom_bootstrap.css
@@ -1,215 +1,335 @@
-.card {
-    position: relative;
+/*!
+ * Bootstrap v4.4.1 (https://getbootstrap.com/)
+ * Copyright 2011-2019 The Bootstrap Authors
+ * Copyright 2011-2019 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
+
+ /* colors, breakpoints and font-types */
+ :root {
+  --blue: #007bff;
+  --indigo: #6610f2;
+  --purple: #6f42c1;
+  --pink: #e83e8c;
+  --red: #dc3545;
+  --orange: #fd7e14;
+  --yellow: #ffc107;
+  --green: #28a745;
+  --teal: #20c997;
+  --cyan: #17a2b8;
+  --white: #fff;
+  --gray: #6c757d;
+  --gray-dark: #343a40;
+  --primary: #007bff;
+  --secondary: #6c757d;
+  --success: #28a745;
+  --info: #17a2b8;
+  --warning: #ffc107;
+  --danger: #dc3545;
+  --light: #f8f9fa;
+  --dark: #343a40;
+  --breakpoint-xs: 0;
+  --breakpoint-sm: 576px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 992px;
+  --breakpoint-xl: 1200px;
+  --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+ /* .card related classes */
+.bs4-card {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+}
+
+.bs4-card > hr {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.bs4-card > .bs4-list-group:first-child .bs4-list-group-item:first-child {
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.bs4-card > .bs4-list-group:last-child .bs4-list-group-item:last-child {
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+.bs4-card-body {
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 1.25rem;
+}
+
+.bs4-card-title {
+  margin-bottom: 0.75rem;
+}
+
+.bs4-card-subtitle {
+  margin-top: -0.375rem;
+  margin-bottom: 0;
+}
+
+.bs4-card-text:last-child {
+  margin-bottom: 0;
+}
+
+.bs4-card-link:hover {
+  text-decoration: none;
+}
+
+.bs4-card-link + .bs4-card-link {
+  margin-left: 1.25rem;
+}
+
+.bs4-card-header {
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: rgba(0, 0, 0, 0.03);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.bs4-card-header:first-child {
+  border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
+}
+
+.bs4-card-header + .bs4-list-group .bs4-list-group-item:first-child {
+  border-top: 0;
+}
+
+.bs4-card-footer {
+  padding: 0.75rem 1.25rem;
+  background-color: rgba(0, 0, 0, 0.03);
+  border-top: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.bs4-card-footer:last-child {
+  border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
+}
+
+.bs4-card-header-tabs {
+  margin-right: -0.625rem;
+  margin-bottom: -0.75rem;
+  margin-left: -0.625rem;
+  border-bottom: 0;
+}
+
+.bs4-card-header-pills {
+  margin-right: -0.625rem;
+  margin-left: -0.625rem;
+}
+
+.bs4-card-img-overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1.25rem;
+}
+
+.bs4-card-img,
+.bs4-card-img-top,
+.bs4-card-img-bottom {
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  width: 100%;
+}
+
+.bs4-card-img,
+.bs4-card-img-top {
+  border-top-left-radius: calc(0.25rem - 1px);
+  border-top-right-radius: calc(0.25rem - 1px);
+}
+
+.bs4-card-img,
+.bs4-card-img-bottom {
+  border-bottom-right-radius: calc(0.25rem - 1px);
+  border-bottom-left-radius: calc(0.25rem - 1px);
+}
+
+.bs4-card-deck .bs4-card {
+  margin-bottom: 15px;
+}
+
+@media (min-width: 576px) {
+  .bs4-card-deck {
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 0.25rem;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    margin-right: -15px;
+    margin-left: -15px;
   }
-  
-  .card > hr {
-    margin-right: 0;
+  .bs4-card-deck .bs4-card {
+    -ms-flex: 1 0 0%;
+    flex: 1 0 0%;
+    margin-right: 15px;
+    margin-bottom: 0;
+    margin-left: 15px;
+  }
+}
+
+.bs4-card-group > .bs4-card {
+  margin-bottom: 15px;
+}
+
+@media (min-width: 576px) {
+  .bs4-card-group {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+  }
+  .bs4-card-group > .bs4-card {
+    -ms-flex: 1 0 0%;
+    flex: 1 0 0%;
+    margin-bottom: 0;
+  }
+  .bs4-card-group > .bs4-card + .bs4-card {
     margin-left: 0;
+    border-left: 0;
   }
-  
-  .card > .list-group:first-child .list-group-item:first-child {
-    border-top-left-radius: 0.25rem;
-    border-top-right-radius: 0.25rem;
+  .bs4-card-group > .bs4-card:not(:last-child) {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
   }
-  
-  .card > .list-group:last-child .list-group-item:last-child {
-    border-bottom-right-radius: 0.25rem;
-    border-bottom-left-radius: 0.25rem;
+  .bs4-card-group > .bs4-card:not(:last-child) .bs4-card-img-top,
+  .bs4-card-group > .bs4-card:not(:last-child) .bs4-card-header {
+    border-top-right-radius: 0;
   }
-  
-  .card-body {
-    -ms-flex: 1 1 auto;
-    flex: 1 1 auto;
-    min-height: 1px;
-    padding: 1.25rem;
+  .bs4-card-group > .bs4-card:not(:last-child) .bs4-card-img-bottom,
+  .bs4-card-group > .bs4-card:not(:last-child) .bs4-card-footer {
+    border-bottom-right-radius: 0;
   }
-  
-  .card-title {
-    margin-bottom: 0.75rem;
+  .bs4-card-group > .bs4-card:not(:first-child) {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
   }
-  
-  .card-subtitle {
-    margin-top: -0.375rem;
-    margin-bottom: 0;
+  .bs4-card-group > .bs4-card:not(:first-child) .bs4-card-img-top,
+  .bs-4card-group > .bs4-card:not(:first-child) .bs4-card-header {
+    border-top-left-radius: 0;
   }
-  
-  .card-text:last-child {
-    margin-bottom: 0;
+  .bs4-card-group > .bs4-card:not(:first-child) .bs4-card-img-bottom,
+  .bs4-card-group > .bs4-card:not(:first-child) .bs4-card-footer {
+    border-bottom-left-radius: 0;
   }
-  
-  .card-link:hover {
-    text-decoration: none;
+}
+
+.bs4-card-columns .bs4-card {
+  margin-bottom: 0.75rem;
+}
+
+@media (min-width: 576px) {
+  .bs4-card-columns {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+    -webkit-column-gap: 1.25rem;
+    -moz-column-gap: 1.25rem;
+    column-gap: 1.25rem;
+    orphans: 1;
+    widows: 1;
   }
-  
-  .card-link + .card-link {
-    margin-left: 1.25rem;
-  }
-  
-  .card-header {
-    padding: 0.75rem 1.25rem;
-    margin-bottom: 0;
-    background-color: rgba(0, 0, 0, 0.03);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
-  }
-  
-  .card-header:first-child {
-    border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
-  }
-  
-  .card-header + .list-group .list-group-item:first-child {
-    border-top: 0;
-  }
-  
-  .card-footer {
-    padding: 0.75rem 1.25rem;
-    background-color: rgba(0, 0, 0, 0.03);
-    border-top: 1px solid rgba(0, 0, 0, 0.125);
-  }
-  
-  .card-footer:last-child {
-    border-radius: 0 0 calc(0.25rem - 1px) calc(0.25rem - 1px);
-  }
-  
-  .card-header-tabs {
-    margin-right: -0.625rem;
-    margin-bottom: -0.75rem;
-    margin-left: -0.625rem;
-    border-bottom: 0;
-  }
-  
-  .card-header-pills {
-    margin-right: -0.625rem;
-    margin-left: -0.625rem;
-  }
-  
-  .card-img-overlay {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    padding: 1.25rem;
-  }
-  
-  .card-img,
-  .card-img-top,
-  .card-img-bottom {
-    -ms-flex-negative: 0;
-    flex-shrink: 0;
+  .bs4-card-columns .bs4-card {
+    display: inline-block;
     width: 100%;
   }
-  
-  .card-img,
-  .card-img-top {
-    border-top-left-radius: calc(0.25rem - 1px);
-    border-top-right-radius: calc(0.25rem - 1px);
-  }
-  
-  .card-img,
-  .card-img-bottom {
-    border-bottom-right-radius: calc(0.25rem - 1px);
-    border-bottom-left-radius: calc(0.25rem - 1px);
-  }
-  
-  .card-deck .card {
-    margin-bottom: 15px;
-  }
-  
-  @media (min-width: 576px) {
-    .card-deck {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-flow: row wrap;
-      flex-flow: row wrap;
-      margin-right: -15px;
-      margin-left: -15px;
-    }
-    .card-deck .card {
-      -ms-flex: 1 0 0%;
-      flex: 1 0 0%;
-      margin-right: 15px;
-      margin-bottom: 0;
-      margin-left: 15px;
-    }
-  }
-  
-  .card-group > .card {
-    margin-bottom: 15px;
-  }
-  
-  @media (min-width: 576px) {
-    .card-group {
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-flow: row wrap;
-      flex-flow: row wrap;
-    }
-    .card-group > .card {
-      -ms-flex: 1 0 0%;
-      flex: 1 0 0%;
-      margin-bottom: 0;
-    }
-    .card-group > .card + .card {
-      margin-left: 0;
-      border-left: 0;
-    }
-    .card-group > .card:not(:last-child) {
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-    }
-    .card-group > .card:not(:last-child) .card-img-top,
-    .card-group > .card:not(:last-child) .card-header {
-      border-top-right-radius: 0;
-    }
-    .card-group > .card:not(:last-child) .card-img-bottom,
-    .card-group > .card:not(:last-child) .card-footer {
-      border-bottom-right-radius: 0;
-    }
-    .card-group > .card:not(:first-child) {
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-    }
-    .card-group > .card:not(:first-child) .card-img-top,
-    .card-group > .card:not(:first-child) .card-header {
-      border-top-left-radius: 0;
-    }
-    .card-group > .card:not(:first-child) .card-img-bottom,
-    .card-group > .card:not(:first-child) .card-footer {
-      border-bottom-left-radius: 0;
-    }
-  }
-  
-  .card-columns .card {
-    margin-bottom: 0.75rem;
-  }
-  
-  @media (min-width: 576px) {
-    .card-columns {
-      -webkit-column-count: 3;
-      -moz-column-count: 3;
-      column-count: 3;
-      -webkit-column-gap: 1.25rem;
-      -moz-column-gap: 1.25rem;
-      column-gap: 1.25rem;
-      orphans: 1;
-      widows: 1;
-    }
-    .card-columns .card {
-      display: inline-block;
-      width: 100%;
-    }
-  }
+}
 
-.fullscreen {
-    height: 100vh;
+/* shadow */
+
+.bs4-shadow-sm {
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
+}
+
+.bs4-shadow {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+}
+
+.bs4-shadow-lg {
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175) !important;
+}
+
+.bs4-shadow-none {
+  box-shadow: none !important;
+}
+
+/* height and width */
+
+.bs4-w-25 {
+  width: 25% !important;
+}
+
+.bs4-w-50 {
+  width: 50% !important;
+}
+
+.bs4-w-75 {
+  width: 75% !important;
+}
+
+.bs4-w-100 {
+  width: 100% !important;
+}
+
+.bs4-w-auto {
+  width: auto !important;
+}
+
+.bs4-h-25 {
+  height: 25% !important;
+}
+
+.bs4-h-50 {
+  height: 50% !important;
+}
+
+.bs4-h-75 {
+  height: 75% !important;
+}
+
+.bs4-h-100 {
+  height: 100% !important;
+}
+
+.bs4-h-auto {
+  height: auto !important;
+}
+
+.bs4-mw-100 {
+  max-width: 100% !important;
+}
+
+.bs4-mh-100 {
+  max-height: 100% !important;
+}
+
+.bs4-min-vw-100 {
+  min-width: 100vw !important;
+}
+
+.bs4-min-vh-100 {
+  min-height: 100vh !important;
+}
+
+.bs4-vw-100 {
+  width: 100vw !important;
+}
+
+.bs4-vh-100 {
+  height: 100vh !important;
 }
