--- a/custom_liferay_overwrite.css
+++ b/custom_liferay_overwrite.css
@@ -1,20 +1,32 @@
-/* Removes Side Margins from Liferay Homepage */
 
-/* Makes Navigation Bar go over entire page*/
+
+/* Makes Navigation bar go over entire page width 
+and Removes Side margins from Liferay Homepage */
 
 #wrapper {
   padding: 0;
   margin: inherit;
 }
 
-/* Moves Logo and Site Number to the Right */
+/* Moves logo and site number to the right */
 
 #banner > #heading {
   padding: 0px 40px 0px 40px;
 }
 
-/* Changes Footer Position and allows for insertion of Image*/
+/* Changes Footer position and allows for insertion of image*/
 
 #footer {
   padding: 0px 40px 0px 40px;
+}
+/* Removes margin from breadcrumbs to content */
+#content > #breadcrumbs {
+  margin-bottom: inherit;
+ }
+
+/* Removes Margin and Padding from Portlet/Web Content Displays */ 
+.portlet-borderless-container 
+{
+padding: 0 !important; 
+margin-bottom: 0 !important; 
 }
