--- a/custom_liferay_overwrite.css
+++ b/custom_liferay_overwrite.css
@@ -1,5 +1,3 @@
-
-
 /* Makes Navigation bar go over entire page width 
 and Removes Side margins from Liferay Homepage */
 
@@ -13,7 +11,30 @@ and Removes Side margins from Liferay Homepage */
 #banner > #heading {
   padding: 0px 40px 0px 40px;
 }
+/* Makes font size responsive for all navigation bar elements */
 
+#banner > #navigation {
+
+  font-size: 1.2em;
+  }
+
+/* Changes navigation bar color moves and removes border width and left padding*/
+#banner > #navigation .navbar-inner {
+  background: var(--darkncct);
+  border-width: 0;
+  min-height: 36px;
+  padding-left: 0;
+}
+
+/* Changes color of selected navigation bar item */
+#banner > #navigation .nav > .active > a {
+  background-color: var(--ncct);
+  background-image: none;
+}
+/* Changes color of unselected navigation bar item*/
+#banner > #navigation .navbar-inner li a {
+  background-color: var(--darkncct);
+}
 /* Changes Footer position and allows for insertion of image*/
 
 #footer {
@@ -22,11 +43,10 @@ and Removes Side margins from Liferay Homepage */
 /* Removes margin from breadcrumbs to content */
 #content > #breadcrumbs {
   margin-bottom: inherit;
- }
+}
 
-/* Removes Margin and Padding from Portlet/Web Content Displays */ 
-.portlet-borderless-container 
-{
-padding: 0 !important; 
-margin-bottom: 0 !important; 
+/* Removes Margin and Padding from Portlet/Web Content Displays */
+.portlet-borderless-container {
+  padding: 0 !important;
+  margin-bottom: 0 !important;
 }
