Snippets/borderless-definition-table: CREATE borderless table template html structure
Custom-Bootstrap.css:
ADD responsive table scrollbar showing table content for small screen width
ADD default bootstrap borderless table structure

Custom-CSS:
ADD alternating background color for table rows
ADD increased font-weight for table text
CHANGE line-spacing for table text
CHANGE alignment of table-text to left of container
CHANGE increased table-text font-size

--- a/custom.css
+++ b/custom.css
@@ -8,3 +8,36 @@ ul.bs4-list-group {
   margin-left: 0;
   margin-bottom: 0;
 }
+
+/* Adjustments to bootstrap table defaults*/
+
+/* Increase line spacing in table */
+.bs4-table {
+    line-height: 1.5;
+  }
+  
+  /* Align definition text to the left and increase font-size + font-weight */
+  .bs4-table-borderless th {
+  text-align:left; 
+  font-weight: 700; 
+  font-size: 1.5rem;
+  }
+    /* Align description text to the left and increase font-size + font-weight */
+  .bs4-table-borderless td
+  {
+  text-align:left; 
+  font-weight: 500; 
+  font-size: 1.5rem;
+  }
+
+    /* Change font-color and background color for odd rownumbers */
+  .bs4-table-striped tbody tr:nth-of-type(odd) {
+    background-color: #027ba4;
+    color: white;
+  }
+      /* Change font-color and background color for even rownumbers */
+  .bs4-table-striped tbody tr:nth-of-type(even) {
+    background-color: white;
+    color: black;
+  }
+  
