reorder HTML DOM and style changes

--- a/custom.css
+++ b/custom.css
@@ -104,10 +104,12 @@ li.no-dfg-only {
 
 /* acivated state */
 .switch-label {
-  padding: .3rem;
-  border: .2rem transparent;
   background-color: var(--ncct);
+  border: .2rem transparent;
   color:white;
+  font-size: 2rem;
+  line-height: 1.2;
+  padding: .3rem;
 }
 
 /* hide the default checkbox */
@@ -165,12 +167,10 @@ input.switch {
   color: var(--gray);
   background-color: white;
   border-color: var(--gray);
-  border-color: transparent;
 }
 
 #dfg-switch:checked ~ * .dfg-only-highlight.switch-label {
   color: var(--gray);
   background-color: white;
   border-color: var(--gray);
-  border-color: transparent;
 }
