custom.css ADD background-color class for NCCT blue ADD List-Type-Style for unordered list without bullet points custom-bootstrap.css ADD bootstrap code for  list-group-item ADD font-styling for white text snippets: ADD html code for card-list site: ADD html code used on download page

--- a/custom.css
+++ b/custom.css
@@ -177,3 +177,11 @@ input.switch {
   background-color: white;
   border-color: var(--gray);
 }
+
+ul.list-bullets-none {
+  list-style-type: none;
+      }
+
+.bg-ncct {
+  background-color: var(--ncct) !important;
+}
