snippets/media-list.html: ADD template html code for list of media objects
site/our-center.html:

CHANGE OurCenter_CCNnetwork section:
REMOVE list-group structuring of list-elements since images weren't aligned between the list elements
ADD listelements as bootstrap mediaobjects to allow for aligned image and text structure
ADD link to logos for each competence center

CHANGE OurCenter-Institutes section:
REMOVE duplicate class definitions
REFORMATTED and standardized wrappers for each card element

CHANGE OurCenter-Contact section:
REMOVE borders from cards
CHANGE "bs4-img-top" class definition to liferay native "img-top" class to reduce image height and width

custom-bootstrap.css
ADD "bs4-media" class to allow for the creation of media-objects
ADD "bs4-media-body" class to set position of media elements
ADD "bs4-img-fluid" class to create a responsive image container
ADD "bs4-img-thumbnail" class to allow for thumbnail styling of images
ADD "bs4-border-0" class so containers can be set as borderless

--- a/custom_bootstrap.css
+++ b/custom_bootstrap.css
@@ -3075,3 +3075,33 @@
 .bs4-text-white {
   color: white !important;
 }
+
+.bs4-media {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: start;
+  align-items: flex-start;
+}
+
+.bs4-media-body {
+  -ms-flex: 1;
+  flex: 1;
+}
+
+.bs4-img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.bs4-img-thumbnail {
+  padding: 0.25rem;
+  background-color: #fff;
+  border: 1px solid #dee2e6;
+  border-radius: 0.25rem;
+  max-width: 100%;
+  height: auto;
+}
+
+.bs4-border-0 {
+  border: 0 !important;
+}
