custom.css: ADD vertical spacer classes
snippets/media-list:
REMOVE max-width style from media-body <div>

site/our-center.html:

OurCenter_CCnetwork section:
REMOVE bs4-media class from list elements to remove unnecessary styling
ADD d-flex class to list elements

OurCenter_Vision section:
ADD styling to text

--- a/custom.css
+++ b/custom.css
@@ -202,3 +202,16 @@ input.switch {
   background-color: var(--ncct) !important;
 }
 
+.vertical-spacer-vh-10 {
+  height: 10vh !important;
+}
+.vertical-spacer-vh-25 {
+  height: 25vh !important;
+}
+.vertical-spacer-vh-50 {
+  height: 50vh !important;
+}
+.vertical-spacer-vh-75 {
+  height: 75vh !important;
+}
+
