overwrite overwritten font-size with browser initial value undo .aui styling in liferay set font-size to initial (normally 16px)

--- a/custom_liferay_overwrite.css
+++ b/custom_liferay_overwrite.css
@@ -1,3 +1,12 @@
+/* use the standard value of 16px for rem computation*/
+:root {
+  font-size: initial;
+}
+.aui body {
+  font-size: initial;
+}
+
+
 /* Makes Navigation bar go over entire page width 
 and Removes Side margins from Liferay Homepage */
 #wrapper {
