format code, rename vh classes, add img-cover

--- a/custom.css
+++ b/custom.css
@@ -15,7 +15,7 @@ ol.bs4-list-group {
   margin-bottom: 0;
 }
 
-ol>li.bs4-list-group-item {
+ol > li.bs4-list-group-item {
   display: list-item;
   list-style-position: inside;
 }
@@ -169,29 +169,29 @@ input.switch {
 
 /* move the indicator when checked*/
 
-#dfg-switch:checked~* .slider:before {
+#dfg-switch:checked ~ * .slider:before {
   transform: translateX(100%);
 }
 
 /* toggle visibility of dfg <li> */
 
-#dfg-switch:not(:checked)~* li.dfg-only-display {
+#dfg-switch:not(:checked) ~ * li.dfg-only-display {
   display: none;
 }
 
-#dfg-switch:checked~* li.no-dfg-only-display {
+#dfg-switch:checked ~ * li.no-dfg-only-display {
   display: none;
 }
 
 /* disableled state of the .switch-label elements*/
 
-#dfg-switch:not(:checked)~* .no-dfg-only-highlight.switch-label {
+#dfg-switch:not(:checked) ~ * .no-dfg-only-highlight.switch-label {
   color: var(--gray);
   background-color: white;
   border-color: var(--gray);
 }
 
-#dfg-switch:checked~* .dfg-only-highlight.switch-label {
+#dfg-switch:checked ~ * .dfg-only-highlight.switch-label {
   color: var(--gray);
   background-color: white;
   border-color: var(--gray);
@@ -208,14 +208,14 @@ input.switch {
 }
 
 .translucent-bg-container::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   background-color: var(--bg-color);
-  opacity: 0.5;
+  opacity: 0.8;
   z-index: -1;
   /* display below other children */
 }
@@ -224,16 +224,34 @@ input.switch {
   background-color: var(--ncct) !important;
 }
 
-.vertical-spacer-vh-10 {
+.vh-10 {
   height: 10vh !important;
 }
 
-.vertical-spacer-vh-25 {
+.vh-25 {
   height: 25vh !important;
 }
-.vertical-spacer-vh-50 {
+.vh-50 {
   height: 50vh !important;
 }
-.vertical-spacer-vh-75 {
+.vh-75 {
   height: 75vh !important;
+}
+.min-vh-10 {
+  min-height: 10vh !important;
+}
+.min-vh-25 {
+  min-height: 25vh !important;
+}
+.min-vh-50 {
+  min-height: 50vh !important;
+}
+.min-vh-75 {
+  min-height: 75vh !important;
+}
+
+img.img-cover {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
 }
