increase navbar font-size to `larger` edit contact email link

--- a/custom_liferay_overwrite.css
+++ b/custom_liferay_overwrite.css
@@ -37,6 +37,7 @@ and Removes Side margins from Liferay Homepage */
 
 .aui #navigation .navbar-inner {
   background-color: var(--ncct-dark);
+  font-size: larger;
 }
 
 /* Changes background color for active navbar element*/
