--- a/custom_liferay_overwrite.css
+++ b/custom_liferay_overwrite.css
@@ -4,6 +4,7 @@
 }
 .aui body {
   font-size: initial;
+  line-height: 1.7;
 }
 
 
@@ -50,8 +51,13 @@ and Removes Side margins from Liferay Homepage */
 /* Changes Footer position and allows for insertion of image*/
 
 #footer {
-  padding: 0px 5px 0px 5px;
+  margin-top: 15vh;
+  padding: 35px;
+  background-size: 90%;
+  background-repeat: no-repeat;
+  background-image: url("https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52039/ncct-logo-all.png/3760437f-216f-4bfa-b2c5-e5d7ed911a66?t=1583160765889");
 }
+
 
 /* Removes margin from breadcrumbs to content */
 
