--- a/custom_liferay_overwrite.css
+++ b/custom_liferay_overwrite.css
@@ -38,7 +38,7 @@ and Removes Side margins from Liferay Homepage */
 
 .aui #navigation .navbar-inner {
   background-color: var(--ncct-dark);
-  font-size: larger;
+  font-size: x-large;
 }
 
 /* Changes background color for active navbar element*/
