Implemented NCCT button style and add bootstrap classes for card layout
ADD bs4-flex-column to align button in card-body
ADD custom class min-vw-auto to make card scaling correct for different screen sizes
ADD custom class btn-ncct for correct button size and color schematic in cards

--- a/custom.css
+++ b/custom.css
@@ -286,6 +286,10 @@ input.switch {
   min-width: 75vw !important;
 }
 
+.min-vw-auto {
+  min-width: auto !important;
+}
+
 .max-vw-10 {
   max-width: 10vw !important;
 }
@@ -324,4 +328,9 @@ img.img-in-text {
     -moz-column-count: 4;
     column-count: 4;
   }
+}
+.btn-ncct {
+  max-width: 200px;
+  margin: auto;
+  background-image: none !important;
 }
