Added 2 pseudoelements supporting external links icon with different background colors

--- a/custom.css
+++ b/custom.css
@@ -15,7 +15,7 @@ ol.bs4-list-group {
   margin-bottom: 0;
 }
 
-ol > li.bs4-list-group-item {
+ol>li.bs4-list-group-item {
   display: list-item;
   list-style-position: inside;
 }
@@ -147,29 +147,29 @@ input.switch {
 
 /* move the indicator when checked*/
 
-#dfg-switch:checked ~ * .slider:before {
+#dfg-switch:checked~* .slider:before {
   transform: translateX(100%);
 }
 
 /* toggle visibility of dfg <li> */
 
-#dfg-switch:not(:checked) ~ * li.dfg-only-display {
+#dfg-switch:not(:checked)~* li.dfg-only-display {
   display: none;
 }
 
-#dfg-switch:checked ~ * li.no-dfg-only-display {
+#dfg-switch:checked~* li.no-dfg-only-display {
   display: none;
 }
 
 /* disableled state of the .switch-label elements*/
 
-#dfg-switch:not(:checked) ~ * .no-dfg-only-highlight.switch-label {
+#dfg-switch:not(:checked)~* .no-dfg-only-highlight.switch-label {
   color: var(--gray);
   background-color: white;
   border-color: var(--gray);
 }
 
-#dfg-switch:checked ~ * .dfg-only-highlight.switch-label {
+#dfg-switch:checked~* .dfg-only-highlight.switch-label {
   color: var(--gray);
   background-color: white;
   border-color: var(--gray);
@@ -209,36 +209,47 @@ input.switch {
 .vh-10 {
   height: 10vh !important;
 }
+
 .vh-25 {
   height: 25vh !important;
 }
+
 .vh-50 {
   height: 50vh !important;
 }
+
 .vh-75 {
   height: 75vh !important;
 }
+
 .min-vh-10 {
   min-height: 10vh !important;
 }
+
 .min-vh-25 {
   min-height: 25vh !important;
 }
+
 .min-vh-50 {
   min-height: 50vh !important;
 }
+
 .min-vh-75 {
   min-height: 75vh !important;
 }
+
 .max-vh-10 {
   max-height: 10vh !important;
 }
+
 .max-vh-25 {
   max-height: 25vh !important;
 }
+
 .max-vh-50 {
   max-height: 50vh !important;
 }
+
 .max-vh-75 {
   max-height: 75vh !important;
 }
@@ -246,36 +257,47 @@ input.switch {
 .vw-10 {
   width: 10vw !important;
 }
+
 .vw-25 {
   width: 25vw !important;
 }
+
 .vw-50 {
   width: 50vw !important;
 }
+
 .vw-75 {
   width: 75vw !important;
 }
+
 .min-vw-10 {
   min-width: 10vw !important;
 }
+
 .min-vw-25 {
   min-width: 25vw !important;
 }
+
 .min-vw-50 {
   min-width: 50vw !important;
 }
+
 .min-vw-75 {
   min-width: 75vw !important;
 }
+
 .max-vw-10 {
   max-width: 10vw !important;
 }
+
 .max-vw-25 {
   max-width: 25vw !important;
 }
+
 .max-vw-50 {
   max-width: 50vw !important;
 }
+
 .max-vw-75 {
   max-width: 75vw !important;
 }
@@ -291,10 +313,31 @@ img.img-cover {
 }
 
 /* set default column count to 4 */
+
 @media (min-width: 576px) {
   .bs4-card-columns {
     -webkit-column-count: 4;
     -moz-column-count: 4;
     column-count: 4;
   }
+}
+
+a[target="_blank"]:after {
+  content: "";
+  background-image: url("https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/external-linktransparentblue.png/921a7415-7323-4f83-b77a-bb5a289c4009?t=1586359941379");
+  background-size: 100% 100%;
+  display: inline-block;
+  height: 15px;
+  width: 15px;
+  position: relative;
+}
+
+a.btn:after {
+  content: "";
+  background-image: url("https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/external-linktransparentwhite.png/33f8123c-35e1-4510-8871-b423d880d01c?t=1586359941122");
+  background-size: 100% 100%;
+  display: inline-block;
+  height: 15px;
+  width: 15px;
+  position: relative;
 }
